--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SECRET_KEY='YOUR_SECRET_KEY'
-DEBUG=
 REACT_APP_OAUTH_CLIENT_ID='ENTER CLIENT ID'
+GOOGLE_APPLICATION_CREDENTIALS='PATH TO YOUR SERVICE ACCOUNT JSON FILE'
+GS_BUCKET_NAME='GS BUCKET NAME'
