--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 exclude = */.*/,.*/,__pycache__,node_modules,.git,*migrations*
-extend_ignore = E129,E203,E231,E501,F405,F403
+extend_ignore = E129,E203,E231,E501,F405,F403,F401
 max-line-length = 100
