--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+env:
+  global:
+    - SECRET_KEY="!pyfta##&3@51#%t=c^7%in1p)n7m^d+(e$!au%*#1m7y5bmr#"
+    - SIGNING_KEY=""
+
 jobs:
   include:
     - language: node_js # js testing
