--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-env:
-  global:
-    - SECRET_KEY="!pyfta##&3@51#%t=c^7%in1p)n7m^d+(e$!au%*#1m7y5bmr#"
-    - SIGNING_KEY=""
-
 jobs:
   include:
     - language: node_js # js testing
@@ -34,10 +29,14 @@ jobs:
       install:
       - poetry install
 
+      env:
+      - SECRET_KEY="!pyfta##&3@51#%t=c^7%in1p)n7m^d+(e$!au%*#1m7y5bmr#"
+      - SIGNING_KEY=""
+
       scripts:
-      - python manage.py makemigrations --settings=buying_selling.settings.ci
-      - python manage.py migrate --settings=buying_selling.settings.ci
-      - python manage.py test --settings=buying_selling.settings.ci
+      - python manage.py makemigrations --settings=buying_selling.settings.dev
+      - python manage.py migrate --settings=buying_selling.settings.dev
+      - python manage.py test --settings=buying_selling.settings.dev
 
     - language: python # pre-commit
 
