--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,19 @@ services:
       - .:/usr/src/app
     ports:
       - 8000:8000
+    environment: 
+      - IN_DOCKER=True
+      - DATABASE=postgres
+      - SQL_HOST=db
+      - SQL_PORT=5432
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=thapar_olx
+      - POSTGRES_PASSWORD=thapar_olx
+      - POSTGRES_DB=thapar_olx
+
+volumes:
+  postgres_data:
