--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requests = "^2.23.0"
 protobuf = "3.11.3"
 django-storages = {extras = ["google"], version = "^1.9.1"}
 google-cloud-storage = "^1.28.1"
-psycopg2-binary = "2.8.3"
+psycopg2 = "^2.8.5"
 
 [tool.black]
 line-length = 200
