--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
+dist: xenial
+group: edge
+
+stages:
+  - name: Tests
+  - name: Deployment
+    if: branch = master AND type = push AND fork = false
+
 jobs:
   include:
-    - language: node_js # js testing
+    - stage: Tests
+      name: React Tests
+      language: node_js # js testing
       node_js:
         - '12.16.1'
       cache: yarn
@@ -13,7 +23,9 @@ jobs:
         - yarn test
         - yarn build
 
-    - language: python # for django test travis automatially creates a virtualenv, no need to specify it
+    - stage: Tests
+      name: Django Tests
+      language: python # for django test travis automatially creates a virtualenv, no need to specify it
       python:
         - 3.8
       before_install:
@@ -24,10 +36,25 @@ jobs:
         - python manage.py check --deploy
         - python manage.py test
 
-    - language: python # pre-commit
+    - stage: Tests
+      name: Pre-commit tests
+      language: python # pre-commit
       python:
         - 3.8
       install:
         - pip install pre-commit
       script:
         - pre-commit run --all-files
+
+    - stage: Deployment
+      name: Backend Deployment
+      language: python
+      python: '3.8'
+      cache: pip
+      before_install:
+        - openssl aes-256-cbc -K $encrypted_0ac492343b18_key -iv $encrypted_0ac492343b18_iv -in dsc_tiet.enc -out dsc_tiet -d
+        - chmod 400 ./dsc_tiet
+      install:
+        - pip install ansible
+      script:
+        - ansible-playbook playbooks/deploy.yml
