--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ jobs:
         - pre-commit run --all-files
 
     - stage: Deployment
-      name: Backend Deployment
+      name: Full Project Deployment
       language: python
       python: '3.8'
       cache: pip
