--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_OAUTH_CLIENT_ID='ENTER CLIENT ID'
+REACT_APP_OAUTH_CLIENT_ID='996651917612-c3olipfl8in8e4josk4krmet86mvcisl.apps.googleusercontent.com'
 REACT_APP_BACKEND_ENDPOINT='https://thaparolx.dsctiet.tech'
